# pokemon-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  dependencias_dev.txt  dependencies.txt  docker-compose.yaml  main.py  pokemon.db  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260202_1036_0227c478fad6_initial_migration.py  20260206_1033_e64ccb561367_add_battles_table.py  20260206_2144_f673f7100000_modified_models_conexion.py
frontend/: main.py  requirements.txt
frontend/pages/: auth.py  backpacks.py  battles.py  dashboard.py  items.py  pokemon.py  teams.py  trainers.py
frontend/utils/: api_client.py  session_state.py  validators.py
frontend/utils/api_client/: __init__.py  auth_client.py  backpacks_client.py  base_client.py  battles_client.py  items_client.py  pokemon_client.py  teams_client.py  trainers_client.py
scripts/: seed_data.py  update_imports.py
src/: .env  config.py
src/application/: __init__.py
src/application/dtos/: __init__.py  auth_dto.py  backpack_dto.py  battle_dto.py  item_dto.py  pokemon_dto.py  team_dto.py  trainer_dto.py
src/application/services/: auth_service.py  backpack_service.py  base_service.py  battle_service.py  item_service.py  pokemon_service.py  team_service.py  trainer_service.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  backpack.py  battle.py  item.py  pokemon.py  team.py  trainer.py  user.py
src/domain/enums/: __init__.py  item_enums.py  pokemon_enums.py  trainer_enums.py
src/domain/protocols/: entity_protocol.py
src/domain/repositories/: __init__.py  backpack_repository.py  base_repository.py  battle_repository.py  item_repository.py  pokemon_repository.py  team_repository.py  trainer_repository.py  user_repository.py
src/infrastructure/: db.py
src/infrastructure/database/: connection.py  models.py
src/infrastructure/repositories/: sqlalchemy_pokemon_repository  sqlalchemy_pokemon_repository.py  sqlalchemy_trainer_repository.py
src/persistance/: db.py
src/persistance/database/: __init__.py  connection.py
src/persistance/repositories/: sqlalchemy_pokemon_repository.py  sqlalchemy_team_repository.py  sqlalchemy_trainer_repository.py
src/persistence/database/: __init__.py  connection.py  models.py
src/persistence/repositories/: __init__.py  base_sqlmodel_repository.py  sqlalchemy_backpack_repository.py  sqlalchemy_battle_repository.py  sqlalchemy_item_repository.py  sqlalchemy_pokemon_repository.py  sqlalchemy_team_repository.py  sqlalchemy_trainer_repository.py  sqlmodel_backpack_repository.py  sqlmodel_battle_repository.py  sqlmodel_item_repository.py  sqlmodel_pokemon_repository.py  sqlmodel_team_repository.py  sqlmodel_trainer_repository.py  sqlmodel_user_repository.py  user_repository.py
src/presentation/api/: __init__.py  auth.py  backpacks.py  battles.py  items.py  pokemon.py  teams.py  trainers.py
src/presentation/dependencies/: auth.py
tests/: conftest.py
tests/factories/: __init__.py  auth_factories.py  backpack_factories.py  battle_factories.py  item_factories.py  pokemon_factories.py  team_factories.py  trainer_factories.py
tests/unit/services/: test_auth_service.py  test_backpack_service.py  test_battle_service.py  test_item_service.py  test_pokemon_service.py  test_team_service.py  test_trainer_service.py
