[project]
name = "pokemon-api"
version = "0.1.0"
description = "Pokemon API REST with FastAPI following Clean Architecture"
authors = [
    {name = "Luciano Babaglio", email = "luciano.l.babaglio@pwc.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",
    "sqlmodel>=0.0.31,<0.0.32",
    "sqlalchemy>=2.0.45,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "python-multipart>=0.0.6"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.1,<0.29.0"
]

linting = [
    "ruff>=0.14.13,<0.15.0",
    "mypy>=1.19.1,<2.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "pylint>=3.2.0,<3.3.0"
]

dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "ipython>=8.20.0,<9.0.0",
    "rich>=13.0.0,<14.0.0"
]

[project.scripts]
start = "python main.py"
dev = "uvicorn main:app --reload --host 127.0.0.1 --port 8000"
test = "pytest tests/ -v"
lint = "ruff check src/"
format = "ruff format src/"
type-check = "mypy src/"
pylint-check = "pylint src/"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "venv/",
    ".venv/",
    "__pycache__/"
]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error",
    "no-member"
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"