[project]
name = "pokemon-api"
version = "0.1.0"
description = "Pokemon API REST with FastAPI following Clean Architecture"
authors = [
    {name = "Luciano Babaglio", email = "luciano.l.babaglio@pwc.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",
    "sqlmodel>=0.0.31,<0.0.32",
    "sqlalchemy>=2.0.45,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "python-multipart>=0.0.6",
    "alembic>=1.18.3",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "bcrypt>=4.0.0,<5.0.0",
    "email-validator>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.1,<0.29.0",
    "polyfactory>=3.2.0",
    "pytest-mock>=3.15.1",
]

linting = [
    "ruff>=0.14.13,<0.15.0",
    "mypy>=1.19.1,<2.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "pylint>=3.2.0,<3.3.0"
]

dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "ipython>=8.20.0,<9.0.0",
    "rich>=13.0.0,<14.0.0",
    "ruff>=0.14.14",
]

[project.scripts]
pokemon-api = "main:main"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc"
]
extend-exclude = ["alembic/versions/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Do not perform function calls in argument defaults (FastAPI normal)
    "B904",  # Use raise from (not critical for FastAPI)
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = [
    "E501",  # Line too long
    "F401",  # Unused import
    "I001",  # Import sorting
    "E402",  # Module level import not at top of file
]
"alembic/env.py" = [
    "F401",  # Unused import (needed to register models)
    "I001",  # Import sorting (specific order required)
    "E402",  # Module level import not at top of file
]

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["alembic/versions/*.py"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "^alembic/.*$",
]

[[tool.mypy.overrides]]
module = [
    "scripts.*",
    "src.persistence.database.models"
]
ignore_errors = true

[tool.pylint.MASTER]
jobs = 1

[tool.pylint.FORMAT]
max-line-length = 88
output-format = "text"

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error",
    "no-member",
    "invalid-name",
    "unused-import",
    "line-too-long",
    "mixed-line-endings",
    "wrong-import-position",
    "wrong-import-order",
    "broad-exception-caught",
    "redefined-outer-name",
    "duplicate-code",  # R0801 - Disable duplicate code warnings
    "too-many-instance-attributes",  # R0902
    "too-many-return-statements",  # R0911
    "unused-variable",  # W0612 - We already handle this with ruff
]

[tool.pylint.DESIGN]
max-attributes = 10
max-returns = 8
max-branches = 15
max-locals = 18
max-statements = 55

[tool.pylint.SIMILARITIES]
min-similarity-lines = 15
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.pylint.REPORTS]
output-format = "colorized"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.pylint.main]
ignore-paths = [
    "scripts/.*",
    "src/persistence/database/models.py",
    "alembic/versions/.*",
]

fail-under = 9.0

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.bandit]
output_format = "json"  # Cambiar de txt a json para evitar problemas de encoding

[tool.hatch.build.targets.wheel.sources]
"src" = ""
